# gpt2-instruct-finetune

./: README.md  app_instruct.py  pyproject.toml
